--- a/ipa.html
+++ b/ipa.html
@@ -510,25 +510,24 @@ of IPA consistency types statically at compile time.
 <p data-line="119;out/introduction.mdk:82"><span data-line="119;out/introduction.mdk:82"></span><em class="em-star1">Error-bounded Consistency.</em><span data-line="119;out/introduction.mdk:82"></span> IPA is a data structure store, like
 Redis<span data-line="119;out/introduction.mdk:83"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#redis" title="Salvatore Sanfilippo. 
 Redis." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">54</span></a>]</span><span data-line="119;out/introduction.mdk:83"></span> or Riak<span data-line="119;out/introduction.mdk:83"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#riak" title="Basho Technologies, Inc. 
-Riak." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">11</span></a>]</span><span data-line="119;out/introduction.mdk:83"></span>, allowing it to provide both
-traditional performance bounds on storage operations, as well as
-error bounds (e.g., the programmer can bound the returned value to
-within 5<span data-line="119;out/introduction.mdk:86"></span>%<span data-line="119;out/introduction.mdk:86"></span> of the correct value). Within these bounds, IPA
-automatically adapts to return a value with the strongest IPA
-consistency type possible under the current system load.
+Riak." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">11</span></a>]</span><span data-line="119;out/introduction.mdk:83"></span>, allowing it to provide a new type of
+weak consistency that places <span data-line="119;out/introduction.mdk:84"></span><em class="em-star1">numeric error bounds</em><span data-line="119;out/introduction.mdk:84"></span> on the returned
+values.  Within these bounds, IPA automatically adapts to return the
+strongest IPA consistency type possible under the current system
+load.
 </p></li></ul>
 
-<p class="p noindent" data-line="119;out/introduction.mdk:90"><span data-line="119;out/introduction.mdk:90"></span>We implement an IPA prototype based on Scala and Cassandra and show
+<p class="p noindent" data-line="119;out/introduction.mdk:89"><span data-line="119;out/introduction.mdk:89"></span>We implement an IPA prototype based on Scala and Cassandra and show
 that IPA allows the programmer to trade off performance and
 consistency, safe in the knowledge that the type system has checked
 the program for consistency safety. We demonstrate experimentally that
 these mechanisms allow applications to dynamically adapt correctness
 and performance to changing conditions with three applications: a
-simple counter, a Twitter clone based on Retwis<span data-line="119;out/introduction.mdk:96"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#retwis" title="Salvatore Sanfilippo. 
+simple counter, a Twitter clone based on Retwis<span data-line="119;out/introduction.mdk:95"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#retwis" title="Salvatore Sanfilippo. 
 Design and implementation of a simple Twitter clone using PHP and the Redis key-value store. 
-http://&#8203;redis.&#8203;io/&#8203;topics/&#8203;twitter-&#8203;clone, 2015b." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">55</span></a>]</span><span data-line="119;out/introduction.mdk:96"></span> and a Ticket
-sales service modeled after FusionTicket<span data-line="119;out/introduction.mdk:97"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#fusionticket" title="Fusion ticket. 
-http://&#8203;fusionticket.&#8203;org." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">1</span></a>]</span><span data-line="119;out/introduction.mdk:97"></span>. 
+http://&#8203;redis.&#8203;io/&#8203;topics/&#8203;twitter-&#8203;clone, 2015b." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">55</span></a>]</span><span data-line="119;out/introduction.mdk:95"></span> and a Ticket
+sales service modeled after FusionTicket<span data-line="119;out/introduction.mdk:96"></span>&nbsp;<span class="citations" style="target-element:bibitem">[<a href="#fusionticket" title="Fusion ticket. 
+http://&#8203;fusionticket.&#8203;org." class="bibref tex-tooltip localref" style="target-element:bibitem"><span class="cite-number">1</span></a>]</span><span data-line="119;out/introduction.mdk:96"></span>. 
 </p><h2 id="sec-background" class="h1" data-line="120;out/background.mdk:1" data-heading-depth="1" style="display:block"><span data-line="120;out/background.mdk:1"></span><span class="heading-before"><span class="heading-label">2</span>.&#8194;</span><span data-line="120;out/background.mdk:1"></span>The Case for Consistency Safety</h2>
 <p class="p noindent" data-line="120;out/background.mdk:3"><span data-line="120;out/background.mdk:3"></span>Unpredictable Internet traffic and unexpected failures force modern
 datacenter applications to trade off consistency for performance. In
@@ -694,7 +693,7 @@ The runtime is responsible for managing the interaction between these policies. 
 The <span data-line="121;out/types.mdk:99"></span><code class="code code1">List</code><span data-line="121;out/types.mdk:99"></span> ADT used for events has a latency policy that also expresses a domain requirement<span data-line="121;out/types.mdk:99"></span>&#8212;<span data-line="121;out/types.mdk:99"></span>that pages on the website load in reasonable time.
 </p><h3 id="sec-ipa-types" class="h2" data-line="121;out/types.mdk:101" data-heading-depth="2" style="display:block"><span data-line="121;out/types.mdk:101"></span><span class="heading-before"><span class="heading-label">3.4</span>.&#8194;</span><span data-line="121;out/types.mdk:101"></span>Consistency Types</h3>
 <p class="p noindent" data-line="121;out/types.mdk:103"><span data-line="121;out/types.mdk:103"></span>The key to consistency safety in IPA is the consistency types, which means that enforcing type safety directly enforces consistency safety.
-Read operations of ADTs annotated with consistency policies return instances of an <span data-line="121;out/types.mdk:104"></span><em class="em-star1">consistency type</em><span data-line="121;out/types.mdk:104"></span>.
+Read operations of ADTs annotated with consistency policies return instances of a <span data-line="121;out/types.mdk:104"></span><em class="em-star1">consistency type</em><span data-line="121;out/types.mdk:104"></span>.
 These consistency types track the consistency of the results
 and enforce a fundamental non-interference property: 
 results from weakly consistent operations cannot flow into computations with stronger consistency without explicit endorsement.
@@ -727,7 +726,7 @@ Endorsement is an upcast, invoked by <span data-line="121;out/types.mdk:127"></s
 
 
 <p class="p noindent para-continued" data-line="121;out/types.mdk:134"><span data-line="121;out/types.mdk:134"></span>The core type system statically enforces safety by preventing weaker values from flowing into stronger computations.
-Forcing developers to explicitly endorse inconsistent values prevents them from accidentally using inconsistent data there they did not determine it was acceptable, essentially inverting the behavior of current systems where inconsistent data is always treated as if it was safe to use anywhere. However, endorsing values blindly in this way is not the intended use case; the key productivity benefit of the IPA type system comes from the other consistency types which correspond to the consistency policies in<span data-line="121;out/types.mdk:135"></span>&nbsp;<a href="#policies" title="3.3.&#8194;Consistency Policies" class="tex-tooltip localref" style="target-element:h2"><span class="heading-label">§3.3</span></a><span data-line="121;out/types.mdk:135"></span> which allow developers to handle dynamic variations in consistency, which we describe next.
+Forcing developers to explicitly endorse inconsistent values prevents them from accidentally using inconsistent data here they did not determine it was acceptable, essentially inverting the behavior of current systems where inconsistent data is always treated as if it was safe to use anywhere. However, endorsing values blindly in this way is not the intended use case; the key productivity benefit of the IPA type system comes from the other consistency types which correspond to the consistency policies in<span data-line="121;out/types.mdk:135"></span>&nbsp;<a href="#policies" title="3.3.&#8194;Consistency Policies" class="tex-tooltip localref" style="target-element:h2"><span class="heading-label">§3.3</span></a><span data-line="121;out/types.mdk:135"></span> which allow developers to handle dynamic variations in consistency, which we describe next.
 </p><!-- The IPA type system is similar to the probability type system of DECAF [@Boston:15:DECAF], which uses types to track the quality of results computed on approximate hardware, ensuring that a result of low quality cannot flow into a result of higher quality without explicit endorsement. -->
 
 <!-- We elide a thorough formal development of the core IPA type system due to its close similarity with DECAF, instead focusing on the additions introduced by IPA specifically to handle the dynamic annotations from the previous section. -->
