--- a/ipa.html
+++ b/ipa.html
@@ -1327,8 +1327,8 @@ enforcement systems implemented in this work are a sample of
 what is possible within the framework of <span data-line="160;out/conclusion.mdk:12"></span><em class="em-star1">Inconsistent,
 Performance-bound, and Approximate</em><span data-line="160;out/conclusion.mdk:13"></span> types.
 </p><h2 id="sec-acknowledgments" class="clearnum h1" data-line="162" data-heading-depth="1" style="display:block"><span data-line="162"></span>Acknowledgments</h2>
-<p class="p noindent" data-line="163"><span data-line="163"></span>We thank the anonymous reviewers for feedback on earlier versions of this paper. 
-This research was funded in part by NSF under grant <span data-line="164"></span>#<span data-line="164"></span>1518703, DARPA under contract<span data-line="164"></span> <span id="todo" style="color:red;font-size:small;font-family:Lato-Light">[#]</span><span data-line="164"></span>, C-FAR, one of the six SRC STARnet Centers, sponsored by MARCO and DARPA, and gifts by Google and Microsoft.
+<p class="p noindent" data-line="163"><span data-line="163"></span>We thank the anonymous reviewers for their feedback. 
+This research was funded in part by NSF under grant <span data-line="164"></span>#<span data-line="164"></span>1518703, DARPA under contract FA8750<span data-line="164"></span>&#8211;<span data-line="164"></span>16<span data-line="164"></span>&#8211;<span data-line="164"></span>2<span data-line="164"></span>&#8211;<span data-line="164"></span>0032, C-FAR, one of the six SRC STARnet Centers, sponsored by MARCO and DARPA, and gifts by Google and Microsoft.
 </p>
 <div class="bibl" data-line="166;out/paper-web-bib.bbl.mdk:1" style="bbl-file:out/paper-web-bib.bbl.mdk"><h2 id="sec-references" class="clearnum h1 heading-references" data-line="166;out/paper-web-bib.bbl.mdk:2" data-heading-depth="1" style="display:block"><span data-line="166;out/paper-web-bib.bbl.mdk:2"></span>References</h2>
 <div class="bibliography bib-numeric" data-hanging-indent="0" data-style="plainnat" data-line="166;out/paper-web-bib.bbl.mdk:3" style="bibstyle:madoko-numeric">
